# autodealer-orm

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CREATE_SERVICE_ORDER.md  LICENSE  README.md  __init__.py  connection.py  main.py  pyproject.toml  requirements.txt  setup.py
autodealer/: __init__.py  connection.py  queryset.py  services.py
autodealer/actions/: client.py  payment.py
autodealer/domain/: bank.py  document_out_header.py  service_complex_work_item.py
autodealer/integration/: __init__.py  rocketwash.py
autodealer/tools/: seed_test_db.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  quickstart.doctree
docs/.doctrees/api/: connection.doctree  queryset.doctree  rocketwash.doctree
docs/_modules/: index.html
docs/_modules/autodealer/: connection.html  queryset.html
docs/_sources/: index.rst.txt
docs/api/: connection.html  queryset.html  rocketwash.html
source/api/: rocketwash.rst
source/domains/: document.rst  payment.rst
tests/: conftest.py  test_connection.py  test_models.py  test_queryset.py
tests/write/: conftest.py  test_client.py  test_nomenclature.py  test_organization.py  test_vehicle.py  test_write.py
